More content to site

--- a/index.html
+++ b/index.html
@@ -5,13 +5,24 @@
         <link rel="stylesheet" href="styles.css">
     </head>
 
-<h1> Rossy Dang </h1>
+<h1 class="name"> Rossy Dang </h1>
+
+<body>
 <img src="rossy.jpg" class="pic">
 
 <p> Hi! I'm Rossy. I'm a 2nd year undergraduate at Georgia Tech majoring in computer science! As a first generation college 
     student in my family, I'm passionate about helping people grow professionally and learn about the resources they have availiable to them
 that they can use to find a better job and create a brighter future for themselves. For much of my life, I've worried a lot about the future, thinking about
 how I would do things like support my aging parents financially, and my focusing on my career has always been a way for me to be hopeful about the future. I know scary
-it can be to start a career mostly yourself, and I want to let people know that they aren't alone.  </p>
+it can be to start a career mostly yourself, and I want to let people know that they aren't alone in feeling that way.  </p>
+
+<br>
+
+<img src="engine.jpg" class="pic">
+<p>
+ Aside from my studies, I also find that I enjoy learning outside of class. I especially love buying random STEM kits and just playing around with them, like this model engine kit. I didn't get to play with these as a kid, but now I can! 
+</p>
+
+</body>
 
 </html>
