--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <head>
         <link rel="stylesheet" href="styles.css">
     </head>
+<div class="header">
+    <h1> Rossy's Personal Homepage </h1>
+</div>
 
-<h1 class="name"> Rossy Dang </h1>
+
 
 <body>
 <img src="rossy.jpg" class="pic">
@@ -20,7 +23,7 @@ it can be to start a career mostly yourself, and I want to let people know that 
 
 <img src="engine.jpg" class="pic">
 <p>
- Aside from my studies, I also find that I enjoy learning outside of class. I especially love buying random STEM kits and just playing around with them, like this model engine kit. I didn't get to play with these as a kid, but now I can! 
+ Aside from my studies, I also find that I enjoy learning outside of class. I especially love buying random STEM kits and just playing around with them, like this model engine kit. I didn't get to play with these a lot as a kid, but now I can! 
 </p>
 
 </body>
